# PureImageConverter

./: .gitignore  CMakeLists.txt  README.md  autogen.sh  rebuild.sh
src/: CMakeLists.txt  MPIConverter.cpp  MPIConverter.h  MainWindow.cpp  MainWindow.h  VPIConverter.cpp  VPIConverter.h  VectorImageConverter.cpp
